Button remove notes added, LocalStore in development. Now the notes are organized

--- a/src/main/resources/templates/Components/Main-index.html
+++ b/src/main/resources/templates/Components/Main-index.html
@@ -14,9 +14,10 @@
 </head>
 <body>
 <main th:fragment="main-index">
+    <h1 class="m-5 font-weight-bold">Suas anotações</h1>
     <div class="container">
-        <h1>Suas anotações</h1>
-        <div class="row">
+        <div class="row" id="cards-container">
+            <!-- O primeiro card é colocado aqui manualmente -->
             <div class="col-md-4">
                 <div class="card my-2">
                     <div class="card-body">
