--- a/src/main/resources/templates/Components/Nav-Index.html
+++ b/src/main/resources/templates/Components/Nav-Index.html
@@ -24,15 +24,16 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <button class="btn btn-primary mr-4">Criar Card</button>
-                <button class="btn btn-success">Cards Criados</button>
+                <button id="createCardButton" class="btn btn-primary mr-4">Criar Card</button>
+                <button id="createdCardsButton" class="btn btn-success">Cards Criados</button>
+
             </ul>
         </div>
     </div>
 </nav>
 
 
-
+<script src="/js/GeneraterCard.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
